<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.WriteNewBlogPost">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_view_height">
                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@color/colorImageView"
                    android:adjustViewBounds="true"/>

                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextTitle"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/title"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

                <EditText
                    android:id="@+id/editTextBody"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/body"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/catergory"
                android:ems="10" />

            <Button
                android:id="@+id/tarifEkleButton"
                style="@style/Button.CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_white_button_selector"
                android:text="@string/action_tarif_ekle"
                android:textColor="@color/rounde_white_button_text_color_selector"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
