<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <!--toolbar start-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/guillotine_toolbar"
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <!--toolbar end-->

    <!--page contents start-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/profile_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_profile" />

            <com.gelecegiyazanlar.tarifsepeti.widgets.CanaroTextView
                android:id="@+id/profile_text"
                style="@style/TextView.GuillotineItem"
                android:text="@string/profile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/admin_group"
            android:layout_below="@id/profile_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_settings" />

            <com.gelecegiyazanlar.tarifsepeti.widgets.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/tarifEkle" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sign_out"
            android:layout_below="@id/admin_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_settings" />

            <com.gelecegiyazanlar.tarifsepeti.widgets.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/sign_out" />

        </LinearLayout>
        <ListView
            android:layout_below="@id/sign_out"
            android:id="@+id/categories_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <!--page contents end-->

</LinearLayout>